[package]
name = "Code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
env_logger = "0.11.9"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
log = "0.4.29"
rfd = "0.14"

[package.metadata.bundle]
name = "Quasar"
identifier = "com.android-varx.quasar"
icon = ["Quasar.icns"]
